Archive2/24/8a53f125124672/output
main.cpp:20:15: error: no matching member function for call to 'bar'
    derived{}.bar();
    ~~~~~~~~~~^~~
main.cpp:9:10: note: candidate template ignored: substitution failure [with U = derived]: call to non-static member function without an object argument
    void bar() {}
         ^
1 error generated.
